--- a/template/alterar/index.html
+++ b/template/alterar/index.html
@@ -18,10 +18,16 @@
             </div>
         </li>
     </ul>
-        <input type="text" placeholder="Digite seu nome"></input>
-        <input type="text" placeholder="Digite sua idade"></input>
-        <input type="text" placeholder="Digite seu Endereço"></input>
-        <input type="text" placeholder="Digite sua Biografia"></input>
+    <div class="input">
+        <label for="">Digite seu nome</label>
+        <input type="text"></input>
+        <label for="">Digite sua idade</label>
+        <input type="text"></input>
+        <label for="">Digite seu Endereço</label>
+        <input type="text"></input>
+        <label for="">Digite sua Biografia</label>
+        <input type="text"></input>
+    </div>
         <div class="listaBotoes">
             <button href="" class="botoes">Alterar</button>
         </div>
