--- a/template/alterar/style.css
+++ b/template/alterar/style.css
@@ -29,6 +29,7 @@ main{
 }
 li{
     margin: 10px;
+
 }
 .fotoPerfil{
     display: flex;
@@ -50,12 +51,14 @@ li{
     padding: 5px;
     margin: 10px;
     border-radius: 10px;
-    background-color: #fff;
+    background-color: #05060f0a;
     transition: 1s;
+    border: 2px solid transparent;
 }
 .botoes:hover , .botaoAlterar:hover{
     cursor: pointer;
     transform: scale(0.9);
+    border-color: #05060f;
 }
 .botaoAlterar{
     display: flex;
@@ -63,6 +66,25 @@ li{
     align-items: center;
     transition: 1s;
 }
-input{
-    background-color: #fff;
+.input{
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    justify-content: center;
+    width: 100%;
+    border-radius: 10px;
+    transition: 1s;
+    border: 2px solid transparent;
+}
+.input input{
+    border-radius: 5px;
+    border: 2px solid transparent;
+    background-color: #05060f0a;
+    transition: 1s;
+}
+input:hover{
+    border-color: #05060f;
+}
+.input label{
+    margin-bottom: 5px;
 }
