--- a/desafio/src/main/resources/static/style.css
+++ b/desafio/src/main/resources/static/style.css
@@ -4,6 +4,7 @@
     font-family: Arial, Helvetica, sans-serif;
     box-sizing: border-box;
     font-weight: normal;
+    color: black;
 }
 body{
     height: 100%;
@@ -15,6 +16,7 @@ body{
     box-shadow: 2;
 }
 main{
+    width: 500px;
     max-width: 500px;
     margin: 5%;
     padding: 20px;
@@ -29,7 +31,6 @@ main{
 }
 li{
     margin: 10px;
-
 }
 .fotoPerfil{
     display: flex;
@@ -43,7 +44,7 @@ li{
     justify-content: center;
     align-items: center;
 }
-.botoes{
+.botoes , .uploadImagem{
     display: flex;
     flex-direction: column;
     text-align: center;
@@ -54,7 +55,9 @@ li{
     background-color: #05060f0a;
     transition: 1s;
     border: 2px solid transparent;
+    text-decoration: none;
 }
+
 .botoes:hover , .botaoAlterar:hover{
     cursor: pointer;
     transform: scale(0.9);
@@ -66,25 +69,13 @@ li{
     align-items: center;
     transition: 1s;
 }
-.input{
-    display: flex;
-    flex-direction: column;
-    text-align: left;
-    justify-content: center;
-    width: 100%;
-    border-radius: 10px;
-    transition: 1s;
-    border: 2px solid transparent;
+input{
+    background-color: #fff;
 }
-.input input{
+.retornos p{
     border-radius: 5px;
     border: 2px solid transparent;
     background-color: #05060f0a;
     transition: 1s;
-}
-input:hover{
-    border-color: #05060f;
-}
-.input label{
-    margin-bottom: 5px;
+    margin: 8px;
 }
