--- a/desafio/src/main/resources/templates/index.html
+++ b/desafio/src/main/resources/templates/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Perfil</title>
-    <link rel="stylesheet" th:href="style.css">
+    <link rel="stylesheet" th:href="@{style.css}">
 </head>
 <body>
     <main>
     <ul>
         <li class="fotoPerfil">
-            <img th:src="default.png" alt="" width="128" height="128">
+            <img th:src="@{default.png}" alt="" width="128" height="128">
         </li>
     </ul>
     <div class="retornos">
@@ -20,7 +20,7 @@
         <p>Biografia</p>
     </div>
         <div class="listaBotoes">
-            <a href="alterar/index.html" class="botoes">Alterar</a>
+            <a href="" class="botoes">Alterar</a>
         </div>
     </main>
 
