--- a/desafio/src/main/resources/templates/alterar/index.html
+++ b/desafio/src/main/resources/templates/alterar/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Perfil</title>
-    <link rel="stylesheet" th:href="alterar/style.css">
+    <link rel="stylesheet" th:href="@{alterar/style.css}">
 </head>
 <body>
     <main>
     <ul>
         <li class="fotoPerfil">
-            <img th:src="default.png" alt="" width="128" height="128">
+            <img th:src="@{default.png}" alt="" width="128" height="128">
             <div class="listaBotoes">
                     <label class="uploadImagem">
                         <input type="file" accept="image/jpeg, image/png, image/jpg">
@@ -31,7 +31,7 @@
         <input type="text"></input>
     </div>
         <div class="listaBotoes">
-            <button href="" class="botoes">Alterar</button>
+            <button class="botoes">Alterar</button>
         </div>
     </main>
 
