--- a/desafio/src/main/resources/static/alterar/style.css
+++ b/desafio/src/main/resources/static/alterar/style.css
@@ -4,6 +4,9 @@
     font-family: Arial, Helvetica, sans-serif;
     box-sizing: border-box;
     font-weight: normal;
+    color: black;
+    text-decoration: none;
+
 }
 body{
     height: 100%;
