--- a/desafio/src/main/resources/templates/alterar/index.html
+++ b/desafio/src/main/resources/templates/alterar/index.html
@@ -16,13 +16,13 @@
 
     <form class="input" method="post" action="/salvar"  enctype="multipart/form-data">
         <label >Digite seu nome : </label>
-        <input type="text" name="nome" placeholder=""></input>
+        <input type="text" name="nome" placeholder="" required></input>
         <label >Digite sua idade : </label>
-        <input type="number" name="idade" min="0" max="120"></input>
+        <input type="number" name="idade" min="0" max="120" required></input>
         <label >Digite seu endereço : </label>
-        <input type="text" name="endereco"></input>
+        <input type="text" name="endereco" required></input>
         <label >Digite sua biografia : </label>
-        <input type="text" name="biografia"></input>
+        <input type="text" name="biografia" required></input>
         <div class="listaBotoes">
             <button class="botoes" type="submit">Salvar</button>
         </div>
